# Question_DB

./: .dockerignore  .env.example  .gitattributes  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  compose.prod.env.example  docker-compose.prod.yml  plan.md
.github/workflows/: docker-publish.yml
api/: main.py
docker/: entrypoint.sh
docs/: DEPLOYMENT.md  faq.md  field_dictionary.md  ingestion_guide.md  maintenance_manual.md  project_definition.md  rust_rearchitecture_proposal.md
migrations/: 0001_init_pg.sql  0002_auth.sql
question_bank/: bundle.py  exporter.py  importer.py  quality.py  repository.py  schema.py  stats.py  utils.py  workbooks.py
rust/: Cargo.toml
rust/migrations/: 0001_init_pg.sql
rust/qb_api/: Cargo.toml
rust/qb_api/src/: api.rs  config.rs  db.rs  main.rs
rust/qb_api/tests/: health_route.rs
samples/demo_bundle/: manifest.json
samples/demo_bundle/questions/: QB-2024-E-02.json  QB-2024-E-03.json  QB-2024-T-01.json
samples/demo_bundle/score_workbooks/: demo_score_index.xlsx
scripts/: import_score_workbook.py  import_stats.py  test_full_flow.py
scripts/tests/: config.py  conftest.py  fixtures.py  full_flow.py  session.py  specs.py  test_0_auth.py  test_1_questions.py  test_2_papers.py  test_3_ops.py  test_4_admin.py  validators.py
src/: config.rs  db.rs  main.rs
src/api/: mod.rs  tests.rs
src/api/admin/: API.md  handlers.rs  mod.rs  models.rs  queries.rs
src/api/auth/: API.md  handlers.rs  middleware.rs  mod.rs  models.rs  password.rs  (+2 more)
tests/: health_route.rs  test_init_and_import.py  test_stats_and_difficulty.py
(+36 files in other folders)
